# DandelionMusic

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: checks.yml  dockerhub.yml  release.yml  update-dependencies.yml  update-pre-commit.yml
assets/: goodbye.opus  hello.opus  wait.opus
config/: build-requirements.txt  build.py  config.py  db-requirements.txt  db.txt  en.json  pyproject.toml  setup.py  update-deps.py  update-dockerfile.py  utils.py
config/cookies/: cookies.txt
heroku-legacy/: README.md
musicbot/: __init__.py  __main__.py  audiocontroller.py  bot.py  context.py  ffmpeg.py  linkutils.py  loader.py  playlist.py  settings.py  song.py  songinfo.py  timeparse.py  utils.py
musicbot/commands/: developer.py  general.py  music.py  roleplay.py
musicbot/plugins/: button.py
musicbot/yt_dlp_plugins/extractor/: discord.py  suno.py
