[build-system]
requires = [
   "setuptools==78.1.0",
   "wheel==0.45.1",
   "tomli==2.2.1; python_version<'3.11'",
   "packaging==24.2",
   "json-with-comments==1.2.10",
]

[project]
name = "MusicBot-DB"
description = "Package that installs DB library and jsonc as dependencies"
version = "0.0.3"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "db.txt"}
