[build-system]
requires = [
   "setuptools==82.0.0",
   "wheel==0.46.3",
   "tomli==2.4.0; python_version<'3.11'",
   "packaging==26.0",
   "json-with-comments==1.2.10",
]

[project]
name = "MusicBot-DB"
description = "Package that installs DB library and jsonc as dependencies"
version = "0.0.3"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "db.txt"}
