[build-system]
requires = [
   "setuptools==82.0.1",
   "wheel==0.47.0",
   "tomli==2.4.1; python_version<'3.11'",
   "packaging==26.2",
   "json-with-comments==1.2.10",
]

[project]
name = "MusicBot-DB"
description = "Package that installs DB library and jsonc as dependencies"
version = "0.0.3"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "db.txt"}
